<resources>
    <string name="app_name">X_Club</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="already_signed_in_login">Already Signed in? Login</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
</resources>
